--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <script type="text/babel">
     //root를 id로 불러오기
     const root = document.getElementById("root");
-    //아래: JSX방식(작성및 이해가 쉽다 + )
-    const Title = () => (
-      <h3 id="title" onMouseEnter={() => console.log("mouse entered!")}>
-        Hello!
-      </h3>
-    );
+    //아래: JSX방식(작성및 이해가 쉽다)
+    // const Title = () => (
+    //   <h3 id="title" onMouseEnter={() => console.log("mouse entered!")}>
+    //     Hello!
+    //   </h3>
+    // );
     // 아래: React의 createElement를 사용한 방식
     // const title = React.createElement(
     //   "h3",
@@ -27,14 +27,14 @@
     //아래: JSX방식
     //컴포넌트로 사용하려면 함수로 만들어줘야하며, 함수명은 대문자로 시작해야 인식된다.
     //property에 이벤트 등록이 가능하다.(중요)
-    const Button = () => (
-      <button
-        style={{ backgroundColor: "tomato" }}
-        onClick={() => console.log("im clicked!")}
-      >
-        Click me
-      </button>
-    );
+    // const Button = () => (
+    //   <button
+    //     style={{ backgroundColor: "tomato" }}
+    //     onClick={() => console.log("im clicked!")}
+    //   >
+    //     Click me
+    //   </button>
+    // );
     // 아래: React의 createElement를 사용한 방식
     // const btn = React.createElement(
     //   "button",
@@ -48,14 +48,24 @@
 
     //   "Click me!"
     // );
+    let counter = 0;
+    function countUp() {
+      counter = counter + 1;
+      render();
+    }
+    function render() {
+      ReactDOM.render(<Container />, root);
+    }
     const Container = () => (
       <div>
-        <Title /> <Button />
+        <h3>Total clicks : {counter}</h3>
+        <button onClick={countUp}> Click Me!</button>
       </div>
     );
     //아래: React의 createElement를 사용한 방식
     // const container = React.createElement("div", null, [Title, Button]);
     //ReactDOM의 render를 사용하여 span 요소를 root 라는 id를 가진 div에 배치
-    ReactDOM.render(<Container />, root);
+    // ReactDOM.render(<Container />, root);
+    render();
   </script>
 </html>
