--- a/index.html
+++ b/index.html
@@ -49,11 +49,16 @@
     //   "Click me!"
     // );
     function App() {
-      // 아래: useState() 초깃값 설정 가능
+      // 아래: useState() 초깃값 설정 가능. state가 바뀌면 리렌더가 일어난다.(필요한 부분만 업데이트함)
       let [counter, setCounter] = React.useState(0);
       const onClick = () => {
-        setCounter(counter + 1);
+        // #3.5 : 이전 값을 바탕으로 현재의 값을 변경하고 싶다면, 아래 방법은 오류가 생길 수 있다.
+        //// setCounter(counter + 1);
+        // #3.5 : modifier((현재 값) => 원하는 값); : 예상치 못한 업데이트가 혼동을 주는것을 방지해준다.
+        setCounter((current) => current + 1);
       };
+      console.log("rendered");
+      console.log(counter);
       // 아래: data가 array로 출력됨. 인덱스0의 값은 상태, 인덱스1은 그것을 바꿀 함수
       // console.log(data);
       // 아래: 일일이 인덱스 번호로 지정해줄 수 있다. 근데 그것이 별로라 구조분해 할당 이용.
