--- a/index.html
+++ b/index.html
@@ -13,39 +13,49 @@
     function App() {
       // 3.5 useState 를 console로 출력해보면 배열이 나온다.(value, modifier)
       // 3.6 index[0]은 데이터, index[1] 수정하기 위한 함수
-      const [minutes, setMinutes] = React.useState();
+      const [amount, setAmount] = React.useState();
+      const [flipped, setFlipped] = React.useState(false);
       const onChange = (event) => {
         // 3.6 이벤트 발생시 값 업데이트
-        setMinutes(event.target.value);
+        setAmount(event.target.value);
         // 3.5 SyntheticBaseEvent 발생. 리액트에서 이벤트를 변환하는듯(?) 그 안에 target 과 원래의 JS 이벤트도 확인할 수 있다.
         // console.log(event.target.value);
       };
-      const reset = () => setMinutes(0);
+      const reset = () => setAmount(0);
+      const onFlip = () => {
+        reset();
+        setFlipped((current) => !current);
+      };
+      // 3.7 아래와 같이 하는것은 오류가 발생할 수 있다.
+      // const onFlip = () => setFlipped(!flipped);
       return (
         <div>
           <h1 className="hi">Super Converter</h1>
           <div>
             <label htmlFor="minutes">Minutes</label>
             <input
-              value={minutes}
+              value={flipped ? amount * 60 : amount}
               id="minutes"
               placeholder="Minutes"
               type="number"
               //3.6 이벤트가 발생함을 알려주는 이벤트 리스너
               onChange={onChange}
+              disabled={flipped === true}
             />
           </div>
           <div>
             <label htmlFor="hours">Hours</label>
             <input
-              value={Math.round(minutes / 60)}
+              value={flipped ? amount : Math.round(amount / 60)}
               id="hours"
               placeholder="Hours"
               type="number"
-              disabled
+              onChange={onChange}
+              disabled={flipped === false}
             />
           </div>
           <button onClick={reset}>Reset</button>
+          <button onClick={onFlip}>Flip</button>
         </div>
       );
     }
