--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <!-- 컴파일러로 바벨 사용 -->
   <script type="text/babel">
-    function App() {
+    function MinutesToHours() {
       // 3.5 useState 를 console로 출력해보면 배열이 나온다.(value, modifier)
       // 3.6 index[0]은 데이터, index[1] 수정하기 위한 함수
       const [amount, setAmount] = React.useState();
@@ -31,7 +31,6 @@
       // const onFlip = () => setFlipped(!flipped);
       return (
         <div>
-          <h1 className="hi">Super Converter</h1>
           <div>
             <label htmlFor="minutes">Minutes</label>
             <input
@@ -58,6 +57,33 @@
           </div>
           <button onClick={reset}>Reset</button>
           <button onClick={onFlip}>{flipped ? "Turn back" : "Flip!"}</button>
+        </div>
+      );
+    }
+    function KmToMiles() {
+      return <h3>KM 2 M</h3>;
+    }
+    // 3.9 컴포넌트는 안에 또 다른 컴포넌트를 렌더링 할 수 있다.
+    // 3.9 (divide and conquer) 분할정복이란 가장 기초적인 알고리즘 중 하나로, 하나의 문제를 여러개의 작은 문제로 쪼갠 후 재귀적으로 해결 후, 합쳐서 원래 문제를 해결하는 방법
+    function App() {
+      const [index, setIndex] = React.useState("xx");
+      const onSelect = (event) => {
+        //3.9 변화가 일어나면, setIndex로 state 업데이트.
+        setIndex(event.target.value);
+      };
+      console.log("render with", index);
+      return (
+        <div>
+          <h1>Super Converter</h1>
+          {/* 3.9 select의 change event 리스닝. <select>는 HTML 태그이다. */}
+          <select value={index} onChange={onSelect}>
+            <option value="xx">Select your units </option>
+            <option value="0">Minutes & Hours </option>
+            <option value="1">Km & Miles </option>
+          </select>
+          {index === "XX" ? "Please select your units" : null}
+          {index === "0" ? <MinutesToHours /> : null}
+          {index === "1" ? <KmToMiles /> : null}
         </div>
       );
     }
